Fixed word wrapping for long lines

--- a/raztalk/Content/raztalk.css
+++ b/raztalk/Content/raztalk.css
@@ -12,6 +12,7 @@ section {
 }
 
 table, tbody, tr {
+    table-layout: fixed;
     width: 100%;
     padding: 0;
     margin: 0;
